feat - Adicionando capacidade de visualização dos arquivos em cedentes
